--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^0.3.0-nullsafety.0
   google_fonts: ^2.1.0
-  email_auth: ^1.0.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
