--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = locer
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.locer
+PRODUCT_BUNDLE_IDENTIFIER = com.locer.locer
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2021 com.example. All rights reserved.
