--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   smooth_page_indicator: ^0.3.0-nullsafety.0
   google_fonts: ^2.1.0
   http: ^0.13.4
+  sqflite: ^2.0.1
 
 dev_dependencies:
   flutter_test:
