--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^2.1.0
   http: ^0.13.4
   sqflite: ^2.0.1
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
