--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.4
   sqflite: ^2.0.1
   provider: ^6.0.2
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
