--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.11
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   lottie: ^1.2.1
+  flutter_phoenix: ^1.0.0 # To Restart App after Logout
 
 dev_dependencies:
   flutter_test:
