--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   lottie: ^1.2.1
   flutter_phoenix: ^1.0.0 # To Restart App after Logout
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
