--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  carousel_slider: ^4.0.0
-  smooth_page_indicator: ^0.3.0-nullsafety.0
-  google_fonts: ^2.1.0
-  http: ^0.13.4
-  sqflite: ^2.0.1
-  provider: ^6.0.2
-  shared_preferences: ^2.0.11
-  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
-  lottie: ^1.2.1
+  carousel_slider: ^4.0.0 # Carousel
+  smooth_page_indicator: ^0.3.0-nullsafety.0 # Carousel Page Indicator
+  google_fonts: ^2.1.0 # Google Fonts
+  http: ^0.13.4 # Http
+  sqflite: ^2.0.1 # SqfLite
+  provider: ^6.0.2 # Flutter Provider
+  shared_preferences: ^2.0.11 # Shared Preferences
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1 # Loading Indicator
+  lottie: ^1.2.1 # Lottie Animation Library
   flutter_phoenix: ^1.0.0 # To Restart App after Logout
-  persistent_bottom_nav_bar: ^4.0.2
+  persistent_bottom_nav_bar: ^4.0.2 # Persistent Bottom NavBar
 
 dev_dependencies:
   flutter_test:
