app icon & logo update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_phoenix: ^1.0.0 # To Restart App after Logout
   persistent_bottom_nav_bar: ^4.0.2 # Persistent Bottom NavBar
   shimmer: ^2.0.0 # Shimmer Effect 
+  flutter_svg: ^1.0.3 # Flutter SVG 
 
 dev_dependencies:
   flutter_test:
